cmake_minimum_required(VERSION 3.28)
project(CPointer)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPointer main.cpp
        head.h
        T1.cpp
        util.cpp
        T2.cpp
        T3.cpp
        T4.cpp
        T6.cpp
        T7.cpp
        T8.cpp
        T9.cpp
        T10.cpp
        T11.cpp
        T5.cpp
        T12.cpp
        T13.cpp)
